--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <link rel="preload" href="assets/ankita-photo.jpg" as="image" />
     <link rel="preload" href="assets/sketch.jpg" as="image" />
 
-    <link rel="stylesheet" href="styles.css" />
+    <link rel="stylesheet" href="style.css" />
 </head>
 
 <body>
@@ -60,11 +60,12 @@
                         <figcaption class="photo-text">
                             <h3 id="photo-heading">Grace in Every Smile</h3>
                             <p>A smile that still stays with me ✨</p>
+                            <p>Your smile — it just keeps getting brighter, day by day.</p>
                         </figcaption>
                     </div>
                 </figure>
                 <div class="photo-caption">
-                    <p>It just keeps getting brighter day by day.</p>
+                    <p>Your smile — it just keeps getting brighter, day by day 🙌 </p>
                 </div>
             </div>
         </section>
@@ -80,8 +81,8 @@
 
             <article class="story-item">
                 <h3>The Little Things</h3>
-                <p>Your smile. The way you treated people. How effortlessly graceful you were. It’s funny how the
-                    quietest things leave the deepest impression.</p>
+                <p>Your smile. The way you treated people. How effortlessly graceful you were. It’s funny how it’s
+                    always the quietest things that leave the deepest mark.</p>
             </article>
 
             <article class="story-item">
@@ -126,8 +127,8 @@
                         out in a quiet, graceful way. And even though we haven’t talked a lot, you’ve left a lasting
                         impression.</p>
                     <br />
-                    <p>This sketch is just my way of saying that. Sometimes, art says what words can’t — and this one
-                        came straight from the heart.</p>
+                    <p>This sketch is just my way of showing how much you’ve meant to me — in my own way.
+                        Sometimes, art says what words can’t — and this one came straight from the heart.</p>
                     <br />
                     <p>You becoming an advocate — it’s inspiring. Watching you step into your path with such strength
                         and dignity honestly makes me proud from afar. You’re doing amazing, and I hope you keep going,
@@ -136,10 +137,9 @@
                     <p>You’re a genuinely good person. That kind of goodness is rare, and I hope you carry it with you
                         always — because it’s what makes you truly special.</p>
                     <br />
-                    <p>I hope your year ahead is full of little joys, calm moments, strong days, and everything
-                        beautiful. And good health — always.</p>
+                    <p>You truly deserve all the happiness, love, and joy in the world.</p>
                     <br />
-                    <p>Today is just about you — and if this small gesture brings even a moment of joy to your day,
+                    <p>Today is all about you — and if this small gesture brings even a single moment of joy,
                         that’s more than enough for me.</p>
                     <br />
                     <p>With all my respect, admiration, and warmest wishes,</p>
