--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <link rel="preload" href="assets/ankita-photo.jpg" as="image" />
     <link rel="preload" href="assets/sketch.jpg" as="image" />
 
-    <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="styles.css" />
 </head>
 
 <body>
